syntax = "proto3";

option csharp_namespace = "Shared";

package customTypes;

message Empty {
}

message DecimalValue {
	int64 units = 1;
	sfixed32 nanos = 2;
}

message StandartReply {
	bool Success = 1;
	string Message = 2;
}